[gd_scene load_steps=2 format=3 uid="uid://c0pqk6800iima"]

[ext_resource type="Script" uid="uid://jxxs5pnrs4dw" path="res://editable_table.gd" id="1_5lq1n"]

[node name="EditableTable" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5lq1n")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddRowButton" type="Button" parent="Toolbar"]
layout_mode = 2
text = "Add Row"

[node name="RemoveRowButton" type="Button" parent="Toolbar"]
layout_mode = 2
text = "- Remove Last Row"

[node name="UndoButton" type="Button" parent="Toolbar"]
layout_mode = 2
text = "UNDO"

[node name="HeaderGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="TableGrid" type="GridContainer" parent="."]
layout_mode = 2
